@startuml
'https://plantuml.com/class-diagram

class ex045
{
    public
    main()
}
class write
{
    maker()

}

'classes below this line are methods/functions in the class(es) above
class main
{
    Scanner y
    Scanner x
    output()
}
class maker
{
    FileWriter writer
    while loop
    output()
}


maker <|-- main
write <|-- ex045
main <|- maker


@enduml